# academic-figure-generator

./: .env.docker.example  .env.example  DEPLOY_VPS.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: build-desktop.yml  main.yml
.omc/sessions/: 33065ede-e0e8-49a3-a98f-ba87d28257d3.json  33b6cc72-7cfe-48c3-8643-a29985e47db2.json  5a949ebb-df12-40d9-b911-d24826cb7371.json  95113424-9c8a-47b7-871d-206f63cd7019.json  c44091ef-4fa5-4e5f-915f-e7da6ccaab06.json  f354294a-6a17-4dd4-8def-d5943b711cf2.json  f798cc40-83a0-4e72-94e4-fa71ca8ec942.json
.omc/state/: subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-03-07T05-12-52-190Z.json
backend/: Dockerfile  README.md
backend/alembic/versions/: 0b7f1f2dd6a6_add_generation_error_to_images.py  7c1a9d2f4b21_add_balance_and_pricing_fields.py  a8b9c0d1e2f3_add_user_nanobanana_model.py  b6c1f2a9d7e4_add_per_resolution_image_pricing.py  (+3 more)
backend/app/: config.py  main.py
backend/app/models/: user.py  (+6 more)
backend/tests/: test_config.py  test_nanobanana_service.py  test_prompt_ai_service.py  test_prompt_tasks.py
desktop/: index.html  package-lock.json  package.json  tailwind.config.js
desktop/scripts/: generate-icons.sh  icons-sync.mjs
desktop/src/: App.tsx  external-modules.d.ts  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: phase2-requirements.md  phase2-technical-design.md  requirements.md  technical-design.md
frontend/src/: App.tsx
(+79 files in other folders)
